# agent-army

./: .env.example  .gitignore  README.md  pyproject.toml
agent_army/: __init__.py  api.py  chat.py  cli.py  config.py  db.py  goal_profile.py  models.py  monitor.py  orchestrator.py  prompts.py  runtime.py  validator.py  workspace.py
agent_army/bounty_hunter/: db.py  github.py  hunter.py
agent_army/services/: __init__.py  ollama.py  planner.py  reviewer.py  synthesizer.py
scripts/: chat.ps1  demo-monitor.ps1  live_demo.py  monitor.ps1  start.ps1
tests/: test_chat.py  test_monitor.py  test_orchestrator.py  test_planner.py  test_review_resilience.py  test_reviewer.py  test_runtime.py  test_workspace.py
